--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -2591,7 +2591,8 @@ input, select, textarea {
 			}
 
 				ul.posts article .image img {
-					width: 100%;
+					width: 220%;
+					padding-right: 20px;
 				}
 
 			ul.posts article header {
@@ -2600,6 +2601,7 @@ input, select, textarea {
 				-ms-flex-grow: 1;
 				flex-grow: 1;
 				-ms-flex: 1;
+				padding-left: 50px;
 			}
 
 				ul.posts article header h3 {
